Updated to remove java 21 deprecated calls